<resources>
    <string name="app_name">login2</string>
    <string name="user">Email</string>
    <string name="pass">Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign up</string>
    <string name="confirmpass">Confirm password</string>
    <string name="register_here">Register here</string>
    <string name="register">Register</string>
    <string name="backtologin">Back to login</string>
    <string name="title_activity_main3">MainActivity3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">My Profile</string>
    <string name="menu_post">New Post</string>
    <string name="menu_forum">Forum</string>
    <string name="menu_logout">Log out</string>
    <string name="namePlaceholder">Name Not Entered</string>

    <string name="affirmation1">I am strong.</string>
    <string name="affirmation2">I believe in myself.</string>
    <string name="affirmation3">Each day is a new opportunity to grow and be a better version of myself.</string>
    <string name="affirmation4">Every challenge in my life is an opportunity to learn from.</string>
    <string name="affirmation5">I have so much to be grateful for.</string>
    <string name="affirmation6">Good things are always coming into my life.</string>
    <string name="affirmation7">New opportunities await me at every turn.</string>
    <string name="affirmation8">I have the courage to follow my heart.</string>
    <string name="affirmation9">Things will unfold at precisely the right time.</string>
    <string name="affirmation10">I will be present in all the moments that this day brings.</string>
    <string name="title_activity_main4">MainActivity4</string>
    <string name="firstname">Name</string>
    <string name="lastname">Last Name</string>
    <string name="confpass">Confirm Password</string>
</resources>