<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.login2.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_post"
        android:name="com.example.login2.ui.newPost.PostFragment"
        android:label="@string/menu_post"
        tools:layout="@layout/fragment_post" />

    <fragment
        android:id="@+id/nav_forum"
        android:name="com.example.login2.ui.forum.ForumFragment"
        android:label="@string/menu_forum"
        tools:layout="@layout/fragment_forum" />

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.login2.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <activity
        android:id="@+id/nav_logout"
        android:name="com.example.login2.LogIn"
        android:label="@string/menu_logout"
        tools:layout="@layout/login" />

</navigation>