<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingStart="10dp"
    android:paddingBottom="10dp"
    android:backgroundTint="@color/blue"
    tools:ignore="RtlSymmetry">

    <ImageView
        android:id="@+id/profilePicture"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/noprofilepicture"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:scaleType="matrix"
        android:layout_marginBottom="10dp"
        />

    <TextView
        android:id="@+id/headerFullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/namePlaceholder"
        android:textColor="@color/darkblue"
        />

    <TextView
        android:id="@+id/headerStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/status"
        android:textColor="@color/darkblue"/>


    <TextView
        android:id="@+id/emailHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user"
        android:textColor="@color/darkblue"
        />
</LinearLayout>