<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="110dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:src="@drawable/code2college">
            </ImageView>
        </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp"
            android:background="@drawable/edittext"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:id="@+id/loginText"
                android:textSize="36sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/darkblue"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/username"
                android:background="@drawable/edittext"
                android:layout_marginTop="30dp"
                android:padding="15dp"
                android:hint="@string/user"
                android:drawableLeft="@drawable/baseline_person_24"
                android:textColor="@color/black"
                android:drawablePadding="8dp"
                android:autofillHints="username"/>


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/password"
                android:background="@drawable/edittext"
                android:layout_marginTop="20dp"
                android:padding="15dp"
                android:hint="@string/pass"
                android:drawableLeft="@drawable/baseline_lock_24"
                android:textColor="@color/black"
                android:drawablePadding="8dp"
                android:autofillHints="password"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/login"
                android:id="@+id/loginButton"
                android:textSize="18sp"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/darkblue"
                app:cornerRadius = "20dp"/>

        </LinearLayout>



    </androidx.cardview.widget.CardView>

</LinearLayout>